<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kks6117@PSU.EDU">kks6117@AD.PSU.EDU</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rcl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    
  <exec_depend>rcl</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>joy</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_unitree_legged_msgs</depend>
  <depend>eigen</depend>
  <exec_depend>ros2launch</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
